[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contrabuster"
version = "1.0.2"
description = "Advanced Container Intelligence Scanner"
readme = "README.md"
authors = [
    {name = "xtawb", email = "deviltawb@gmail.com"}
]
license = {text = "MIT"}
keywords = ["security", "scanner", "bugbounty", "containers", "secrets"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Security",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Testing"
]
dependencies = [
    "aiohttp>=3.8.0",
    "requests>=2.28.0",
    "regex>=2022.10.31",
    "entropy>=0.1.1",
    "rich>=13.0.0",
    "aiofiles>=0.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.2.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=0.991",
]
prod = [
    "uvloop>=0.17.0",
    "orjson>=3.8.0",
    "loguru>=0.6.0",
]

[project.urls]
Homepage = "https://github.com/xtawb/CONTRABUSTER"
Repository = "https://github.com/xtawb/CONTRABUSTER.git"

[project.scripts]
contrabuster = "contrabuster.cli:main"
